# walmart_machine_learning_service

./: Dockerfile  LICENSE  Makefile  Procfile  README.md  backup.txt  heroku.yml  pyproject.toml  requirements.txt  runtime.txt  setup.py
app/: main.py
data/processed/: unique_item_list.csv
docs/: Makefile  conf.py  index.rst  make.bat
models/predictive/: lgbm_store_CA_1.joblib  lgbm_store_CA_2.joblib  lgbm_store_CA_3.joblib  lgbm_store_CA_4.joblib  lgbm_store_TX_1.joblib  lgbm_store_TX_2.joblib  lgbm_store_TX_3.joblib  lgbm_store_WI_1.joblib  lgbm_store_WI_2.joblib  lgbm_store_WI_3.joblib
notebooks/: .slugignore  EDA.ipynb
notebooks/forecasting/: AT2-forecasting.ipynb  sandeed_sareem_24622829_time_series_arima.ipynb
notebooks/predictive/: AT2-prediction.ipynb  sandeed_sareem_24622829_predictive_lightgbm.ipynb
src/models/: data_exploration.py  data_preprocessing.py
