[tool.poetry]
name = "adv_mla_at2"
version = "0.1.0"
description = ""
authors = ["ssandeed <sareemsandeed@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry add jupyterlab==3"}]

[tool.poetry.dependencies]
python = "3.9.13"
jupyterlab = "3.6.3"
pandas = "2.0.1"
scikit-learn = "1.2.2"
pmdarima = "2.0.3"
seaborn = "0.12.2"
category_encoders = "2.6.2"
xgboost = "2.0.0"
tabulate = "0.9.0"
lightgbm = "4.1.0"
fastapi = "0.88.0"
uvicorn = "0.20.0"
joblib = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
